# audible

./: .gitignore  README.md  STATUS.md  pyproject.toml
audible_env/: .gitattributes  .hfignore  BLOG.md  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  smoke_test.py  test_deployed_space.py  ws_smoke_test.py
audible_env/data/: build_labels.py  combined.parquet  labeled.parquet
audible_env/data/curriculum/: curriculum_log.json  round_01.parquet  round_02.parquet  round_03.parquet
audible_env/data/synthetic/: synthetic_v1.parquet
audible_env/model/: config.json
audible_env/server/: Dockerfile  __init__.py  app.py  audible_env_environment.py  rubric.py  scenarios.py
training/: build_notebook.py  combine_datasets.py  curriculum.py  dataset.py  deploy.sh  eval_all.py  eval_env.py  notebook.ipynb  plots.py  run_pipeline.sh  synthetic_data.py  train.py
website/: package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: CursorTrail.tsx  DecisionChip.tsx  DemoBlock.tsx  Explore.tsx  Footer.tsx  Hero.tsx  Problem.tsx  Results.tsx  WhatWeBuilt.tsx
website/src/lib/: classify.ts  heuristic.ts  launch.ts  types.ts
website/src/types/: speech.d.ts
