# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-audible_env"
version = "0.1.0"
description = "Audible Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Live-inference deps for the /classify endpoint (mobileBERT classifier).
    # CPU torch is sufficient — the free HF Space tier has no GPU.
    "torch>=2.2.0",
    "transformers>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m audible_env.server.app
server = "audible_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["audible_env", "audible_env.server"]
package-dir = { "audible_env" = ".", "audible_env.server" = "server" }

# CPU-only torch — the HF Spaces free tier is CPU-only, and CUDA wheels would
# bloat the image past tier limits.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true